tests/error/match/types.mml

let f x =
  match x with 
  | true -> x
  | false -> x
in f true
